<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.EnterCodeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registration_title"
        android:text="@string/registration_title"
        android:textStyle="bold"
        style="@style/text_color"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/layout_register_input_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text_enter_code"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        style="@style/text_color"

        app:layout_constraintTop_toBottomOf="@+id/registration_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_register_input_code"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/register_input_code"
        android:layout_margin="25dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_input_code"
            style="@style/text_input_edit_text_number_type"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>